옵션 정산 완

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,9 @@
         flex-direction: column;
       }
     </style>
+    <sciprt>
+      
+    </sciprt>
     <title>Dov</title>
   </head>
   <body>
